--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "next": "11.1.0",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
