--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@next-auth/prisma-adapter": "^0.5.4",
     "@prisma/client": "^2.29.1",
     "next": "11.1.0",
+    "next-auth": "^3.28.0",
     "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
