--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-DATBASE_URL=
+DATABASE_URL=
+
+# ADDED THIS
+# FROM MILTRAP
+EMAIL_SERVER=
+EMAIL_FROM=
+# FOR DEV ONLY (YOU CHANGE THIS IN PRODUCTION)
+NEXTAUTH_URL=
+# SECRET OF YOUR CHICE
+SECRET=
