--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 DATABASE_URL=
 
 # ADDED THIS
-# FROM MILTRAP
-EMAIL_SERVER=
-EMAIL_FROM=
+# FROM MAILTRAP
+EMAIL_SERVER=smtp://user:pass@smtp.mailtrap.io:465
+# THIS YOU SET YOUR EMAIL
+# I THINK YOU SHOUD USE GMAIL HERE (BUT MAKE SURE YOU DON'T HAVE
+# TWO FACTOR ON THAT GMAIL)
+EMAIL_FROM=Your name <you@email.com>
 # FOR DEV ONLY (YOU CHANGE THIS IN PRODUCTION)
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 # SECRET OF YOUR CHICE
 SECRET=
