--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,17 @@ DATABASE_URL=
 
 # ADDED THIS
 # FROM MAILTRAP
+# THIS IS IMPORTANT AND PRETTY ESY TO SETUP
+# IN MAILTRAP DASBOARD
 EMAIL_SERVER=smtp://user:pass@smtp.mailtrap.io:465
 # THIS YOU SET YOUR EMAIL
-# I THINK YOU SHOUD USE GMAIL HERE (BUT MAKE SURE YOU DON'T HAVE
-# TWO FACTOR ON THAT GMAIL)
-# OR YOU CAN PUT WHATEVER MAIL DRESS HER (I'M NOT CERTAIN)
+# YOU CAN MADE UP AN EMAIL
+# IT DOESN'T NEED TO BE REAL EMAIL
+# IT IS ONLY GOING TO BE DISPLAYD AS SENDER EMAIL
 EMAIL_FROM=Your name <you@email.com>
-# FOR DEV ONLY (YOU CHANGE THIS IN PRODUCTION)
+# AS YOU KNOW
+# THIS IS BASE URL FOR NEXT AUT FOR DEV ONLY 
+# (YOU CHANGE THIS IN PRODUCTION, BY ADDING REAL DOMAIN)
 NEXTAUTH_URL=http://localhost:3000
-# SECRET OF YOUR CHICE
+# AND A SECRET OF YOUR CHICE SECRET OF YOUR CHICE
 SECRET=
