--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ EMAIL_FROM=Your name <you@email.com>
 NEXTAUTH_URL=http://localhost:3000
 # AND A SECRET OF YOUR CHICE SECRET OF YOUR CHICE
 SECRET=
+
+SENDGRID_KEY=
