--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 DATABASE_URL=
 
-# ADDED THIS
-# FROM MAILTRAP
-# THIS IS IMPORTANT AND PRETTY ESY TO SETUP
-# IN MAILTRAP DASBOARD
+
+# THIS WAS CREATED FOR MAILTRAP
 EMAIL_SERVER=smtp://user:pass@smtp.mailtrap.io:465
-# THIS YOU SET YOUR EMAIL
-# YOU CAN MADE UP AN EMAIL
-# IT DOESN'T NEED TO BE REAL EMAIL
-# IT IS ONLY GOING TO BE DISPLAYD AS SENDER EMAIL
 EMAIL_FROM=Your name <you@email.com>
-# AS YOU KNOW
-# THIS IS BASE URL FOR NEXT AUT FOR DEV ONLY 
-# (YOU CHANGE THIS IN PRODUCTION, BY ADDING REAL DOMAIN)
+
+# THIS IS FROM SENDGRID
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=465
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=<API KEY>
+# moutful.xyz WE ALREADY VERIFIED IN SENDGRID AS YOU REMEBER
+# SO WE CAN USE WHAT EVER DOMAIN WE VERIFIED
+# IN FRONT I ADED RadeDev, BUT YOU CAN ADD WHAT EVER YOU WANT
+FROM_EMAIL="RadeDev@moutfull.xyz"
+
+
+# -------------------------------------------
 NEXTAUTH_URL=http://localhost:3000
 # AND A SECRET OF YOUR CHICE SECRET OF YOUR CHICE
 SECRET=
