--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@prisma/client": "^2.29.1",
     "@sendgrid/mail": "^7.4.6",
     "axios": "^0.21.1",
-    "next": "11.1.0",
+    "next": "^11.1.0",
     "next-auth": "^3.28.0",
     "next-connect": "^0.10.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
