--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prisma:generate:client": "dotenv -e .env.local -- npx prisma generate",
     "prisma:migrate:init": "dotenv -e .env.local -- npx prisma migrate dev --name init",
     "prisma:migrate": "dotenv -e .env.local -- npx prisma migrate dev",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
+    "prisma:seed": "dotenv -e .env.local -- npm run ts-node prisma/seed.ts --preview-feature",
     "prisma:introspect": "dotenv -e .env.local -- npx prisma introspect"
   },
   "dependencies": {
@@ -35,6 +37,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "prisma": "^2.29.1",
+    "ts-node": "^10.2.1",
     "typescript": "4.3.5"
   }
 }
