--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/x-data-grid-generator": "^4.0.0",
     "@next-auth/prisma-adapter": "^0.5.4",
     "@prisma/client": "^2.30.0",
     "@sendgrid/mail": "^7.4.6",
