--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@prisma/client": "^2.30.2",
     "@sendgrid/mail": "^7.4.6",
     "axios": "^0.21.1",
-    "next": "^11.1.0",
+    "next": "11.1.2",
     "next-auth": "^3.28.0",
     "next-connect": "^0.10.2",
     "react": "^17.0.2",
