--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next-auth/prisma-adapter": "^0.5.4",
     "@prisma/client": "^2.30.2",
     "@sendgrid/mail": "^7.4.6",
+    "@types/multer": "^1.4.7",
     "axios": "^0.21.1",
     "multer": "^1.4.3",
     "next": "11.1.2",
