--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sendgrid/mail": "^7.4.6",
     "@types/multer": "^1.4.7",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "multer": "^1.4.3",
     "next": "11.1.2",
     "next-auth": "^3.28.0",
