--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.18",
+    "babel-plugin-superjson-next": "^0.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "prisma": "^2.30.3",
