--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "next-auth": "^3.28.0",
     "next-connect": "^0.10.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "superjson": "^1.7.5"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
