--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^2.30.3",
     "@sendgrid/mail": "^7.4.6",
     "@types/multer": "^1.4.7",
+    "@types/react-select": "^4.0.17",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "express": "^4.17.1",
@@ -36,6 +37,7 @@
     "next-connect": "^0.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-select": "^4.3.1",
     "superjson": "^1.7.5"
   },
   "devDependencies": {
