--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-connect": "^0.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^2.3.1",
     "react-select": "^4.3.1",
     "superjson": "^1.7.5"
   },
